--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/" />
   <title>Telerik task</title>
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
   <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -26,11 +26,10 @@
   <script src="js/app.js"></script>
   <script src="js/templates.js"></script>
   <script src="js/events/eventLoader.js"></script>
-  <script src="js/events/popupInputsEvents.js"></script>
+  <script src="js/events/inputsEvents.js"></script>
   <script src="js/events/popupWindowEvents.js"></script>
   <script src="js/events/popupDataPagesEvents.js"></script>
-  <!-- <script src="js/templatesHtml.js"></script> -->
-  <!-- <script src="js/data.js"></script> -->
+  <script src="js/data.js"></script>
 </body>
 
 </html>
