Changed the name of the files handling the popup input events

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script src="js/app.js"></script>
   <script src="js/templates.js"></script>
   <script src="js/events/eventLoader.js"></script>
-  <script src="js/events/inputsEvents.js"></script>
+  <script src="js/events/popupInputEvents.js"></script>
   <script src="js/events/popupWindowEvents.js"></script>
   <script src="js/events/popupDataPagesEvents.js"></script>
   <script src="js/data.js"></script>
