--- a/tests/tests.html
+++ b/tests/tests.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Unit Test For Telerik Task</title>
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
-
   </head>
   <body>
     <div id="mocha">
@@ -14,6 +13,8 @@
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/chai/chai.js"></script>
     <script src="../node_modules/chai-jquery/chai-jquery.js"></script>
+    <script src="../node_modules/sinon/pkg/sinon-1.17.3.js"></script>
+    <script src="../node_modules/sinon-chai/lib/sinon-chai.js"></script>
     <script src="../js/templates.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/events/eventLoader.js"></script>
@@ -25,10 +26,10 @@
       mocha.setup('bdd');
       var expect = chai.expect;
     </script>
-    <script src="../js/sum.js"></script>
-    <script src="../tests/sum.tests.js"></script>
     <script src="../js/app.js"></script>
     <script src="../tests/app.tests.js"></script>
+    <script src="../js/events/popupWindowEvents.js"></script>
+    <script src="../tests/popupWindowEvents.tests.js"></script>
     <script type="text/javascript">
       mocha.run();
     </script>
