--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   </div>
   <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="js/templates.js"></script>
+  <script src="js/template.js"></script>
   <script src="js/data.js"></script>
   <script src="js/app.js"></script>
   <script src="js/events/eventLoader.js"></script>
