--- a/tests/tests.html
+++ b/tests/tests.html
@@ -15,7 +15,7 @@
     <script src="../node_modules/chai-jquery/chai-jquery.js"></script>
     <script src="../node_modules/sinon/pkg/sinon-1.17.3.js"></script>
     <script src="../node_modules/sinon-chai/lib/sinon-chai.js"></script>
-    <script src="../js/templates.js"></script>
+    <script src="../js/template.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/events/eventLoader.js"></script>
     <script src="../js/events/popupInputEvents.js"></script>
