Starts with some refactoring

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="js/template.js"></script>
-  <script src="js/data.js"></script>
+  <script src="js/productItem.js"></script>
   <script src="js/app.js"></script>
   <script src="js/events/eventLoader.js"></script>
   <script src="js/events/popupInputEvents.js"></script>
