--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
   </div>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="js/template.js"></script>
-  <!-- <script src="js/productItem.js"></script> -->
+  <script src="js/productItem.js"></script>
+  <script src="js/selectedProductItem.js"></script>
   <script src="js/app.js"></script>
   <script src="js/events/eventLoader.js"></script>
   <script src="js/events/popupInputEvents.js"></script>
   <script src="js/events/popupWindowEvents.js"></script>
   <script src="js/events/popupDataPagesEvents.js"></script>
+  <script src="js/productItem.js"></script>
 </body>
 
 </html>
